# kivy-tutorials

./: README.md  pyproject.toml
free-code-camp/: README.md
free-code-camp/galaxy/: galaxy.kv  main.py  menu.kv  menu.py  transforms.py  user_actions.py
free-code-camp/kivy-thelab/: main.py  thelab.kv
sandbox/00-lab/: REAMDE.md
sandbox/01-button-label/: buttonlabel.kv  main.py
sandbox/02-vowel-counter/: main.py
sandbox/99-password-checker/: README.md  main.py
sandbox/kivy_template/: main.py
